Add GET clinician endpoint
