# doc/api/swagger.yaml
@@ -239,6 +239,24 @@ paths:
       responses:
         '201':
           $ref: '#/components/responses/201'
+  
+  # =============== Clinicians
+  /clinicians/{ClinicianID}:
+    get:
+      tags:
+        - Clinicians
+      summary: Get information about a given clinician
+      parameters:
+        - name: ClinicianID
+          required: true
+          in: path
+          schema:
+            $ref: '#/components/schemas/FormFillerID'
+      responses:
+        '200':
+          $ref: '#/components/responses/SDCClinician'
+        '404':
+          description: 'Clinician with the given ID was not found'
 
 
 components:
@@ -410,9 +428,9 @@ components:
             - $ref: '#/components/schemas/SDCTrueFalseAnswer'
           discriminator:
             propertyName: AnswerType
-      IsDraft:
-        type: boolean
-        description: "tells if the response is a draft"        
+        IsDraft:
+          type: boolean
+          description: "tells if the response is a draft"        
     SDCFormMetaData:
         type: object
         description: "An object containing MetaData to a SDCForm"
@@ -425,6 +443,18 @@ components:
             $ref: '#/components/schemas/FormName'
           Version:
             $ref: '#/components/schemas/Version'
+    SDCClinician:
+      type: object
+      description: "An object containing information about a clinician (Form filler)"
+      properties:
+        FormFillerID:
+          $ref: '#/components/schemas/FormFillerID'
+        FirstName:
+          type: string
+          description: 'The clinicians first name'
+        LastName:
+          type: string
+          description: 'The clinicians last name'
 
 
 
@@ -510,5 +540,10 @@ components:
               total:
                 description: "The total number of items available to return"
                 type: integer
-
+    SDCClinician:
+      description: "A clinician"
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/SDCClinician'
 
